--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install cmake
-          # pip install git+https://github.com/monarch-initiative/embiggen.git@develop -U
-          pip install git+https://github.com/monarch-initiative/embiggen.git@c2a81bad4c95d8577e1763a08fc6e679af02a645 -U
+          pip install ensmallen==0.6.6 -U
+          pip install embiggen==0.9.3 -U
           pip install .
           pip install pytest
           pip install --upgrade pytest
           pip install --upgrade mypy
           pip install --upgrade pylint
-          pip install yamllint          
+          pip install yamllint
           pip install coveralls
           pip install pytest-cov
           pip install validate_version_code
           pip install codacy-coverage
-          pip install parameterized 
+          pip install parameterized
       - name: run pytest
         run: |
           coverage erase
