--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install cmake
+          pip install tensorflow
           pip install ensmallen==0.6.6 -U
           pip install embiggen==0.9.3 -U
           pip install .
