--- a/tests/resources/test_good_upload_info.yaml
+++ b/tests/resources/test_good_upload_info.yaml
@@ -4,6 +4,13 @@ graph_data:
     directed: False
     node_path: tests/resources/test_graphs/pos_train_nodes.tsv
     edge_path: tests/resources/test_graphs/pos_train_edges.tsv
+    verbose: True
+    nodes_column: 'id'
+    node_types_column: 'category'
+    default_node_type: 'biolink:NamedThing'
+    sources_column: 'subject'
+    destinations_column: 'object'
+    default_edge_type: 'biolink:related_to'
 
 embeddings:
   embedding_file_name: test_embeddings_test_yaml.tsv
