Install types-PyYAML

--- a/.github/workflows/unit_tests_and_lint.yml
+++ b/.github/workflows/unit_tests_and_lint.yml
@@ -23,7 +23,7 @@ jobs:
           pip install pytest
           pip install --upgrade pytest
           pip install --upgrade mypy
-          mypy --install-types
+          python3 -m pip install types-PyYAML
           pip install --upgrade pylint
           pip install yamllint
           pip install coveralls
