--- a/tests/resources/test_upload_full.yaml
+++ b/tests/resources/test_upload_full.yaml
@@ -17,7 +17,7 @@ graph_data:
     edge_path: tests/resources/test_graphs/pos_train_edges.tsv
 
 embeddings:
-  embedding_file_name: test_embeddings_test_yaml.tsv
+  embedding_file_name: test_embeddings_test_yaml.csv
   embedding_history_file_name: embedding_history.json
   node_embedding_params:
       node_embedding_method_name: SkipGram # one of 'CBOW', 'GloVe', 'SkipGram', 'Siamese', 'TransE', 'SimplE', 'TransH', 'TransR'
