--- a/tests/resources/test_neat.yaml
+++ b/tests/resources/test_neat.yaml
@@ -61,17 +61,27 @@ classifiers:
       type: sklearn.linear_model.LogisticRegression
       parameters:
         random_state: 42
-        max_iter: 1000
+        max_iter: 100
   -
-    classifier_id: dt_0
-    type: Decision Tree
-    edge_method: Average
+    classifier_id: lr_1
+    type: Logistic Regression
+    edge_method: Average # one of EdgeTransformer.methods: Hadamard, Sum, Average, L1, AbsoluteL1, L2, or alternatively a lambda
     model:
-      outfile: "model_decision_tree_test_yaml.h5"
-      type: sklearn.tree.DecisionTreeClassifier
+      outfile: "model_lr1_test_yaml.h5"
+      type: sklearn.linear_model.LogisticRegression
       parameters:
-        max_depth: 30
-        random_state: 42
+        random_state: 24
+        max_iter: 200
+  # -
+  #   classifier_id: dt_0
+  #   type: Decision Tree
+  #   edge_method: Average
+  #   model:
+  #     outfile: "model_decision_tree_test_yaml.h5"
+  #     type: sklearn.tree.DecisionTreeClassifier
+  #     parameters:
+  #       max_depth: 30
+  #       random_state: 42
 
 apply_trained_classifier:
    classifier_model_id: lr_0
