--- a/tests/resources/test.yaml
+++ b/tests/resources/test.yaml
@@ -32,23 +32,23 @@ embeddings:
   embedding_file_name: test_embeddings_test_yaml.csv
   embedding_history_file_name: embedding_history.json
   node_embedding_params:
-      node_embedding_method_name: SkipGram # one of 'CBOW', 'GloVe', 'SkipGram', 'Siamese', 'TransE', 'SimplE', 'TransH', 'TransR'
-      # graph: Graph,
-      # node_embedding_method_name: str,
-      # use_mirrored_strategy: bool = True,
-      # devices: Union[List[str], str] = None,
-      # fit_kwargs: Dict = None,
-      # verbose: Union[bool, int] = True,
-      # automatically_drop_unsupported_parameters: bool = False,
-      # automatically_enable_time_memory_tradeoffs: bool = True,
-      # automatically_sort_by_decreasing_outbound_node_degree: bool = True,
-      # ** kwargs: Dict
-      walk_length: 10 # typically 100 or so
-      batch_size: 128 # typically 512? or more
-      window_size: 4
-      return_weight: 1.0  # 1/p
-      explore_weight: 1.0  # 1/q
-      iterations: 5 # typically 20
+    node_embedding_method_name: SkipGram # one of 'CBOW', 'GloVe', 'SkipGram', 'Siamese', 'TransE', 'SimplE', 'TransH', 'TransR'
+    # graph: Graph,
+    # node_embedding_method_name: str,
+    # use_mirrored_strategy: bool = True,
+    # devices: Union[List[str], str] = None,
+    # fit_kwargs: Dict = None,
+    # verbose: Union[bool, int] = True,
+    # automatically_drop_unsupported_parameters: bool = False,
+    # automatically_enable_time_memory_tradeoffs: bool = True,
+    # automatically_sort_by_decreasing_outbound_node_degree: bool = True,
+    # ** kwargs: Dict
+    walk_length: 10 # typically 100 or so
+    batch_size: 128 # typically 512? or more
+    window_size: 4
+    return_weight: 1.0  # 1/p
+    explore_weight: 1.0  # 1/q
+    iterations: 5 # typically 20
 
   bert_params:
     node_columns:  # ideally these would have more text than category or ID (description)
@@ -92,7 +92,10 @@ classifiers:
     model_compile:
       loss: binary_crossentropy
       optimizer: nadam
-      metrics:  # these can be tensorflow objects or a string that tensorflow understands, e.g. 'accuracy'
+      metrics:
+        # these can be tensorflow objects
+        # or a string that tensorflow understands,
+        # e.g. 'accuracy'
         - type: tensorflow.keras.metrics.AUC
           parameters:
             curve: PR
@@ -120,48 +123,48 @@ classifiers:
               min_delta: 0.001  # min improvement to be considered progress
           - type: tensorflow.keras.callbacks.ReduceLROnPlateau
 
-    - 
-      classifier_id: dt_0
-      type: Decision Tree
-      edge_method: Average
-      model:
-        outfile: "model_decision_tree_test_yaml.h5"
-        type: sklearn.tree.DecisionTreeClassifier
-        parameters:
-          max_depth: 30
-          random_state: 42
+  -
+    classifier_id: dt_0
+    type: Decision Tree
+    edge_method: Average
+    model:
+      outfile: "model_decision_tree_test_yaml.h5"
+      type: sklearn.tree.DecisionTreeClassifier
+      parameters:
+        max_depth: 30
+        random_state: 42
 
-    - 
-      classifier_id: rf_0
-      type: Random Forest
-      edge_method: Average
-      model:
-        outfile: "model_random_forest_test_yaml.h5"
-        type: sklearn.ensemble.RandomForestClassifier
-        parameters:
-          n_estimators: 500
-          max_depth: 30
-          n_jobs: 8  # cpu count
-          random_state: 42
+  -
+    classifier_id: rf_0
+    type: Random Forest
+    edge_method: Average
+    model:
+      outfile: "model_random_forest_test_yaml.h5"
+      type: sklearn.ensemble.RandomForestClassifier
+      parameters:
+        n_estimators: 500
+        max_depth: 30
+        n_jobs: 8  # cpu count
+        random_state: 42
 
-    - 
-      classifier_id: lr_0
-      type: Logistic Regression
-      edge_method: Average
-      model:
-        outfile: "model_lr_test_yaml.h5"
-        type: sklearn.linear_model.LogisticRegression
-        parameters:
-          random_state: 42
-          max_iter: 1000
+  -
+    classifier_id: lr_0
+    type: Logistic Regression
+    edge_method: Average
+    model:
+      outfile: "model_lr_test_yaml.h5"
+      type: sklearn.linear_model.LogisticRegression
+      parameters:
+        random_state: 42
+        max_iter: 1000
 
 apply_trained_classifier:
-   classifier_model_id: lr_0
-   link_node_types:
-      source:
-         - 'biolink:Drug'
-         - 'biolink:ChemicalSubstance'
-      destination:
-         - 'biolink:Protein'
-   cutoff: 0.9
-   outfile: lr_classifier_predictions_kgx.tsv
+  classifier_model_id: lr_0
+  link_node_types:
+    source:
+      - 'biolink:Drug'
+      - 'biolink:ChemicalSubstance'
+    destination:
+      - 'biolink:Protein'
+  cutoff: 0.9
+  outfile: lr_classifier_predictions_kgx.tsv
