--- a/tests/resources/test_urls_for_node_and_edge_paths.yaml
+++ b/tests/resources/test_urls_for_node_and_edge_paths.yaml
@@ -6,7 +6,7 @@ graph_data:
     edge_path: https://someremoteurl.com/edges.tsv
     verbose: True
     nodes_column: 'id'
-    node_types_column: 'category'
+    node_list_node_types_column: 'category'
     default_node_type: 'biolink:NamedThing'
     sources_column: 'subject'
     destinations_column: 'object'
