--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ neat.egg-info/
 output_data
 input_data
 node_embeddings/*
-tests/resources/test_output_data_dir/*.pickle
+tests/resources/test_output_data_dir/**
 tests/resources/tmp/*
