--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ neat.egg-info/
 output_data
 input_data
 node_embeddings/*
-tests/resources/test_output_data_dir/**
+tests/resources/test_output_data_dir/*
 tests/resources/tmp/*
 tests/resources/test_link_prediction/*
