Fix for test_graph_embedding

--- a/tests/resources/test_graph_embedding_bert_tsne.yaml
+++ b/tests/resources/test_graph_embedding_bert_tsne.yaml
@@ -11,7 +11,7 @@ graph_data:
     directed: False
     verbose: True
     nodes_column: 'id'
-    node_types_column: 'category'
+    node_list_node_types_column: 'category'
     default_node_type: 'biolink:NamedThing'
     sources_column: 'subject'
     destinations_column: 'object'
