Fix test_neat - was using impossible filters

--- a/tests/resources/test_neat.yaml
+++ b/tests/resources/test_neat.yaml
@@ -88,8 +88,7 @@ apply_trained_classifier:
     classifier_model_id: lr_0
     link_node_types:
       source:
-          - 'biolink:Drug'
-          - 'biolink:ChemicalSubstance'
+          - 'biolink:Protein'
       destination:
           - 'biolink:Protein'
     cutoff: 0.9
