--- a/neat_quickstart.yaml
+++ b/neat_quickstart.yaml
@@ -29,4 +29,22 @@ embeddings:
     use_mirrored_strategy: False
   
   tsne:
-    tsne_file_name: tsne.png
+    tsne_file_name: tsne_quickstart.png
+
+classifiers:
+  -
+    classifier_id: lr_0
+    type: Logistic Regression
+    edge_method: Average # one of EdgeTransformer.methods: Hadamard, Sum, Average, L1, AbsoluteL1, L2, or alternatively a lambda
+    model:
+      outfile: "model_lr_quickstart"
+      type: sklearn.linear_model.LogisticRegression
+      parameters:
+        random_state: 42
+        max_iter: 100
+
+apply_trained_classifier:
+  -
+    classifier_model_id: lr_0
+    cutoff: 0.9
+    outfile: lr_classifier_predictions_quickstart.tsv
