--- a/tests/resources/test_url_for_embeddings.yaml
+++ b/tests/resources/test_url_for_embeddings.yaml
@@ -1,6 +1,6 @@
-embeddings:
-  embedding_file_name: https://someremoteurl.com/embeddings.tsv
-  embedding_history_file_name: embedding_history.json
+EmbeddingsConfig:
+  filename: https://someremoteurl.com/embeddings.tsv
+  history_filename: embedding_history.json
   node_embedding_params:
       node_embedding_method_name: SkipGram
       walk_length: 10 # typically 100 or so
