Update SonarCloud config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,13 +7,13 @@ sonar.projectVersion=1.0.0
 sonar.organization=knowledge-graph-hub
 sonar.host.url=https://sonarcloud.io
 
-sonar.links.homepage=https://github.com/Knowledge-Graph-Hub/NEAT
-sonar.links.scm=https://github.com/Knowledge-Graph-Hub/NEAT
-sonar.links.issue=https://github.com/Knowledge-Graph-Hub/NEAT/issues
+sonar.links.homepage=https://github.com/Knowledge-Graph-Hub/neat-ml
+sonar.links.scm=https://github.com/Knowledge-Graph-Hub/neat-ml
+sonar.links.issue=https://github.com/Knowledge-Graph-Hub/neat-ml/issues
 
 sonar.language=py
 
-sonar.sources=./neat
+sonar.sources=./neat_ml
 sonar.tests=./tests
 
 sonar.exclusions=**/__pycache__/*,*/__pycache__/*
