activated flake8 in tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 [tox]
 envlist =
     lint
-    ; flake8
+    flake8
     ; mypy
     ; py
 isolated_build = True
@@ -32,7 +32,7 @@ description = Run code formatters and linters.
 [testenv:flake8]
 skip_install = true
 commands =
-    flake8 project/ tests/
+    flake8 neat_ml/ tests/
 deps =
     flake8
     flake8-black
