made some flake8 compliance changes

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ description = Run code formatters and linters.
 [testenv:flake8]
 skip_install = true
 commands =
-    flake8 neat_ml/ tests/
+    flake8 --ignore BLK100 neat_ml/ tests/
 deps =
     flake8
     flake8-black
