--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ neat-ml-schema = "^0.1.10"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 
+[tool.black]
+line-length = 79
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
