--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ description = Run code formatters and linters.
 [testenv:flake8]
 skip_install = true
 commands =
-    flake8 --ignore BLK100 neat_ml/ tests/
+    flake8 neat_ml/ tests/
 deps =
     flake8
     flake8-black
@@ -46,6 +46,16 @@ deps =
     pydocstyle
     
 description = Run the flake8 code quality checker.
+
+#########################
+ # Flake8 Configuration  #
+ # (.flake8)             #
+ #########################
+ [flake8]
+ ignore =
+     E203
+     W503
+     BLK100
 
 [testenv:mypy]
 deps = mypy
