--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ neat-ml-schema = "^0.1.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+parameterized = "^0.8.1"
 
 [tool.black]
 line-length = 79
