edited ignore list for flake and added defn

--- a/tox.ini
+++ b/tox.ini
@@ -53,11 +53,12 @@ description = Run the flake8 code quality checker.
 #########################
 [flake8]
 ignore =
-    E203
-    W503
-    BLK100
-    S301
-    S403
+    W503 # line break before binary operator
+    BLK100 # Black would make changes.
+    S301 # Pickle and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue.
+    S403 # Consider possible security implications associated with pickle module.
+    S506 # Use of unsafe yaml load. Allows instantiation of arbitrary objects.
+    S310 # Audit url open for permitted schemes. Allowing use of file:/ or custom schemes is often unexpected.
 
 [testenv:mypy]
 deps = mypy
