--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "neat-ml"
 version = "0.1.0"
-description = "Network Embeeding of All Things."
+description = "Network Embedding of All Things."
 authors = [
     "Justin Reese <JustinReese@lbl.gov>",
     "Harry Caufield <jhc@lbl.gov>",
@@ -18,7 +18,7 @@ opencv-python = "^4.6.0"
 numpy = "^1.22.4"
 pandas = "^1.4.2"
 jaro-winkler = "2.0.0"
-grape = "^0.1.7"
+grape = "^0.1.8"
 transformers = "^4.20.0"
 boto3 = "^1.24.13"
 botocore = "^1.27.13"
