--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8, 3.9]
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
+        #os: [ ubuntu-latest, windows-latest ]
 
     steps:
     - uses: actions/checkout@v3
