--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 tqdm = "^4.64.0"
 click = "^8.1.3"
 PyYAML = "^6.0"
@@ -29,6 +29,9 @@ neat-ml-schema = "^0.1.10"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 parameterized = "^0.8.1"
+scikit-learn = "^1.1.1"
+tensorflow = "^2.8.0"
+torch = "^1.11.0"
 
 [tool.black]
 line-length = 79
@@ -37,6 +40,9 @@ line-length = 79
 test = [
     "pytest",
     "parameterized",
+    "scikit-learn",
+    "tensorflow",
+    "torch"
     ]
 
 [build-system]
