--- a/tox.ini
+++ b/tox.ini
@@ -38,10 +38,10 @@ deps =
     flake8-black
     flake8-colors
     bandit==1.7.2
-    flake8-bandit
+    ; flake8-bandit
     pep8-naming
     flake8-bugbear
-    flake8-isort
+    ; flake8-isort
     flake8-docstrings
     pydocstyle
     
