--- a/tox.ini
+++ b/tox.ini
@@ -34,14 +34,14 @@ skip_install = true
 commands =
     flake8 neat_ml/ tests/
 deps =
-    flake8
+    flake8<5.0.0
     flake8-black
     flake8-colors
-    bandit==1.7.2
-    ; flake8-bandit
+    bandit
+    flake8-bandit
     pep8-naming
     flake8-bugbear
-    ; flake8-isort
+    flake8-isort
     flake8-docstrings
     pydocstyle
     
