--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ test = [
     "torch"
     ]
 
+[tool.poetry.scripts]
+neat = "neat_ml.cli:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
